# krypt-provider-openssl-cish

./: Makefile.am  README  README.md  configure.ac
src/: Makefile.am
src/krypt-openssl/: Makefile.am
src/libkryptopenssl/: Makefile.am  krypt-provider.h
test/: Krypt.rb
